<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_name1">Team A</string>
    <string name="team_name2">Team B</string>
    <string name="numberOfPointsA">0</string>
    <string name="numberOfPointsB">0</string>
    <string name="threePoints">+3 points</string>
    <string name="twoPoints">+2 points</string>
    <string name="onePoint">Free throw</string>
    <string name="reset">Reset</string>
</resources>
